--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@
     */
     .estudantes-dados {
         display: grid;
-        grid-template-columns: 33% 33% 33%;
+        grid-template-columns: 25% 25% 25% 25%;
         text-align: center;
         padding-bottom: 20px;
     }
